# AIKnowledgeBase

./: .gitignore  README.md
backend/: .env.example  main.py  pyproject.toml  requirements.txt
backend/controller/: __init__.py  chat_controller.py  upload_controller.py
backend/rag/: __init__.py  basic_workflow.py  search_rag.py  state.py  suggestion_rag.py
backend/repository/: __init__.py  chroma.py
backend/service/: __init__.py  chat_service.py  upload_service.py
frontend/: main.py  pyproject.toml  requirements.txt
