[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.3.0",
    "dotenv>=0.9.9",
    "fastapi>=0.120.2",
    "langchain>=1.0.2",
    "langchain-community>=0.4.1",
    "langchain-google-genai>=3.0.0",
    "langchain-tavily>=0.2.12",
    "langgraph>=1.0.2",
    "loguru>=0.7.3",
    "pdfplumber>=0.11.7",
    "python-docx>=1.2.0",
    "python-multipart>=0.0.20",
    "sentence-transformers>=5.1.2",
    "unstructured>=0.18.15",
]
